# jasper

./: README.md  desktop-mamba-workspace-poc.md  infra-setup-guide.md  needle-refinements.md  workspace-recurrent-1b-plan.md
mamba-poc/: .gitignore  README.md  colab_notebook.ipynb  colab_notebook_ac.ipynb  colab_runner.py  colab_runner_ac.py  data.py  kaggle_notebook.ipynb  kaggle_runner.py  model.py  probe.py  pyproject.toml  requirements.txt  setup_vast.sh  train.py  vast_runner.py
mamba-poc/configs/: cell_a.yaml  cell_a_colab.yaml  cell_b.yaml  cell_b_colab.yaml  cell_b_kaggle.yaml  cell_b_vast.yaml  cell_c.yaml  cell_c_colab.yaml  cell_d.yaml  cell_d_colab.yaml  cell_d_kaggle.yaml  cell_d_vast.yaml
