[project]
name = "mamba-poc"
version = "0.1.0"
description = "Mamba + Workspace POC — four parameter-matched cells for recurrent depth experiments"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "einops",
    "numpy",
    "pytest",
    "pyyaml",
    "wandb",
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
